--- a/R/Preliminary_report.Rmd
+++ b/R/Preliminary_report.Rmd
@@ -149,8 +149,7 @@ Let $N_{i,t,s}$ be the abundance (sometimes it was biomass data when abundance d
 
 *Temperature skew*: Skewness of CHELSA-extracted annual temperature timeseries for the study years included in the analysis for each community.
 
-*Temperature variability*: Temperature variability for the community during the study period = median(annual temperature)/IQR(annual temperature distribution for the study period). 
-[Not included in the path model, see explanation in Sec. \@ref(exclude-tvar).]
+*Temperature variability*: Temperature variability for the community during the study period = abs(median(annual temperature))/IQR(annual temperature distribution for the study period). [Note: in Celcius scale temperature t_med could be negative for some sites, so use absolute value]
 
 # Results
 
@@ -369,7 +368,7 @@ There is some suggestion that this may be explained by synchrony, but the statis
 library(dplyr)
 library(tidyverse)
 
-#----- plots for birds -----
+#----- plots for fish -----
 taxa<-"fish"
 
 # select taxa to plot
@@ -726,7 +725,7 @@ library(tidyverse)
 library(leaflet)
 
 plot_temp_on_map<-function(sm_all,t,taxa,scaleup){
-  dat<-sm_all%>%filter(TAXA==taxa)%>%dplyr::select(STUDY_ID,newsite,nsp,LATITUDE,LONGITUDE,t_med,trend_t_tau,t_skw)
+  dat<-sm_all%>%filter(TAXA==taxa)%>%dplyr::select(STUDY_ID,newsite,nsp,LATITUDE,LONGITUDE,t_med,t_skw)
 
   # first cut the continuous variable into bins
   # these bins are now factors
@@ -920,265 +919,137 @@ library(lme4)
 library(piecewiseSEM)
 source(here("R/plot_psem.R"))
 
+call_model_psem<-function(taxa,data=sm_all,
+                          rescaling=T,
+                          mean_centering=T,resloc){
+  
+  sm_all_eachtaxa<-data%>%filter(TAXA==taxa)
+  mydat_scaled<-sm_all_eachtaxa
+  
+  #------ want rescaling? 
+  if(rescaling==T){
+    mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
+                                             center=mean_centering,scale=T))
+    mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
+                                     center=mean_centering,scale=T))
+    mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
+                                       center=mean_centering,scale=T))
+    mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
+                                      center=mean_centering,scale=T))
+    
+    mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
+                                         center=mean_centering,scale=T))
+    mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
+                                         center=mean_centering,scale=T))
+    mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
+                                         center=mean_centering,scale=T))
+    mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
+                                                center=mean_centering,scale=T))
+    mydat_scaled$E<-as.numeric(scale(mydat_scaled$E,
+                                     center=mean_centering,scale=T))
+    
+    mydat_scaled$t_med_celcius<-as.numeric(scale(mydat_scaled$t_med_celcius,
+                                                 center=mean_centering,scale=T))
+    mydat_scaled$t_skw_celcius<-as.numeric(scale(mydat_scaled$t_skw_celcius,
+                                                 center=mean_centering,scale=T))
+    mydat_scaled$t_var_celcius<-as.numeric(scale(mydat_scaled$t_var_celcius,
+                                                 center=mean_centering,scale=T))
+    mydat_scaled$t.sens.slope.celcius<-as.numeric(scale(mydat_scaled$t.sens.slope.celcius,
+                                                        center=mean_centering,scale=T))
+  }
+  dat<-mydat_scaled
+  n<-nrow(dat)
+  
+  # model without evenness (both K/10, Celcius scale)
+  model_psem<-piecewiseSEM::psem(
+    lmer(VR ~ R+t_med+t.sens.slope+(1|UID),data=dat),
+    lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
+    lmer(R~t_med+t_var+t.sens.slope+(1|UID),data=dat),
+    lmer(stability ~ (R*t_med)+VR+A+t.sens.slope+t_skw+t_var+(1|UID), data=dat))
+  
+  model_psem_c<-piecewiseSEM::psem(
+    lmer(VR ~ R+t_med_celcius+t.sens.slope.celcius+(1|UID),data=dat),
+    lmer(A ~ R+t.sens.slope.celcius+t_skw_celcius+(1|UID),data=dat),
+    lmer(R~t_med_celcius+t_var_celcius+t.sens.slope.celcius+(1|UID),data=dat),
+    lmer(stability ~ (R*t_med_celcius)+VR+A+t.sens.slope.celcius+
+           t_skw_celcius+t_var_celcius+(1|UID), data=dat))
+  
+  # model with evenness (both K/10, Celcius scale)
+  model_psem2<-piecewiseSEM::psem(
+    lmer(VR ~ R+E+t_med+t.sens.slope+(1|UID),data=dat),
+    lmer(A ~ R+E+t.sens.slope+t_skw+(1|UID),data=dat),
+    lmer(R~t_med+t_var+t.sens.slope+(1|UID),data=dat),
+    lmer(E~R+t_med+t.sens.slope+t_var+(1|UID),data=dat),
+    lmer(stability ~ R+E+VR+A+(R:t_med)+
+           t_med+t_var+t.sens.slope+t_skw+(1|UID), data=dat))
+  
+  model_psem_c2<-piecewiseSEM::psem(
+    lmer(VR ~ R+E+t_med_celcius+t.sens.slope.celcius+(1|UID),data=dat),
+    lmer(A ~ R+E+t.sens.slope.celcius+t_skw_celcius+(1|UID),data=dat),
+    lmer(R~t_med_celcius+t_var_celcius+t.sens.slope.celcius+(1|UID),data=dat),
+    lmer(E~R+t_med_celcius+t.sens.slope.celcius+t_var_celcius+(1|UID),data=dat),
+    lmer(stability ~ R+E+VR+A+(R:t_med_celcius)+
+           t_med_celcius+t_var_celcius+t.sens.slope.celcius+
+           t_skw_celcius+(1|UID), data=dat))
+  
+  op<-par(mfrow = c(2,2))
+  
+  # model without evenness (both K/10, Celcius scale)
+  cc<-coefs(model_psem,standardize = "scale")
+  plot_psem(n,taxa,cc,layout="circle")
+  saveRDS(model_psem,paste(resloc,"model_psem_",taxa,".RDS",sep=""))
+  
+  cc2<-coefs(model_psem_c,standardize = "scale")
+  plot_psem(n,taxa,cc2,layout="circle")
+  saveRDS(model_psem_c,paste(resloc,"model_psem_celcius_",taxa,".RDS",sep=""))
+  
+  # model with evenness (both K/10, Celcius scale)
+  ccE<-coefs(model_psem2,standardize = "scale")
+  plot_psem(n,taxa,ccE,layout="circle")
+  saveRDS(model_psem2,paste(resloc,"model_psem_with_evenness_",taxa,".RDS",sep=""))
+  
+  ccE2<-coefs(model_psem_c2,standardize = "scale")
+  plot_psem(n,taxa,ccE2,layout="circle")
+  saveRDS(model_psem_c2,paste(resloc,"model_psem_with_evenness_celcius_",taxa,".RDS",sep=""))
+  
+  #print(summary(model_psem))
+  par(op)
+}
+
+sm_all<-read.csv(here("Results/stability_metric_and_env_all.csv"))
+sm_all$UID<-paste(sm_all$source,sm_all$STUDY_ID,sep="_")
+sm_all$A<-sm_all$L+abs(sm_all$U) # total asymmetry
+sm_all<-sm_all%>%dplyr::rename(
+  stability=iCValt,
+  VR=phi_LdM,
+  R=nsp,
+  E=SmithWilson)
+sm_all$TAXA<-as.factor(sm_all$TAXA)
+
+#----- call for birds -----
+taxa<-"birds"
+rescaling<-T
 mean_centering<-TRUE
 resloc<-here("Results/res_Prelim_Report/")
 
-sm_all<-read.csv(here("Results/stability_metric_and_env_all.csv"))
-sm_all$UID<-paste(sm_all$source,sm_all$STUDY_ID,sep="_")
-sm_all$A<-sm_all$L+abs(sm_all$U) # total asymmetry
-sm_all<-sm_all%>%dplyr::rename(
-  stability=iCValt,
-  VR=phi_LdM,
-  R=nsp)
+call_model_psem(taxa = taxa, data=sm_all,
+                rescaling = rescaling,  
+                mean_centering = mean_centering,
+                resloc=resloc)
 
-sm_all$TAXA<-as.factor(sm_all$TAXA)
-
-#---------------- for birds -----------------------
-taxa<-"birds"
-sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
-
-############ want rescaling? #################
-mydat_scaled<-sm_all_eachtaxa
-mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
-                                         center=mean_centering,scale=T))
-mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
-                                 center=mean_centering,scale=T))
-mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
-                                   center=mean_centering,scale=T))
-mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
-                                  center=mean_centering,scale=T))
-
-mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
-                                        center=mean_centering,scale=T))
-
-mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
-                                     center=mean_centering,scale=T))
-mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
-                                           center=mean_centering,scale=T))
-mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
-                                            center=mean_centering,scale=T))
-mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
-                                          center=mean_centering,scale=T))
-#---  
-
-
-dat<-mydat_scaled
-n<-nrow(dat)
-#model_psem<-piecewiseSEM::psem(
-#  lmer(VR ~ R+t.sens.slope+t_med+(1|UID),data=dat),
-#  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-#  lmer(R~t.sens.slope+t_med+(1|UID),data=dat),
-#  lmer(stability ~ (R + VR +A)+t.sens.slope+t_skw+t_med+
-#         (1|UID), data=dat))
-
-#model_psem<-piecewiseSEM::psem(
-#  lmer(VR ~ R+t_med+t.sens.slope+(1|UID),data=dat),
-#  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-#  lmer(R~t_med+t.sens.slope+(1|UID),data=dat),
-#  lmer(stability ~ (R*t_med)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
-
-model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ R+t_med+t.sens.slope+(1|UID),data=dat),
-  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-  lmer(R~t_med+t_var+t.sens.slope+(1|UID),data=dat),
-  lmer(stability ~ (R*t_med)+VR+A+t.sens.slope+t_skw+t_var+(1|UID), data=dat))
-
-cc<-coefs(model_psem)
-plot_psem(n,taxa,cc,layout="circle")
-#print(summary(model_psem))
-saveRDS(model_psem,paste(resloc,"model_psem_",taxa,".RDS",sep=""))
-
-#---------------- for fish -----------------------
+#----- call for fish -----
 taxa<-"fish"
-sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
-
-############ want rescaling? #################
-mydat_scaled<-sm_all_eachtaxa
-mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
-                                         center=mean_centering,scale=T))
-mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
-                                 center=mean_centering,scale=T))
-mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
-                                   center=mean_centering,scale=T))
-mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
-                                  center=mean_centering,scale=T))
-
-mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
-                                        center=mean_centering,scale=T))
-
-mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
-                                     center=mean_centering,scale=T))
-mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
-                                           center=mean_centering,scale=T))
-mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
-                                            center=mean_centering,scale=T))
-mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
-                                          center=mean_centering,scale=T))
-#---  
-dat<-mydat_scaled
-n<-nrow(dat)
-
-model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ R+t_med+t.sens.slope+(1|UID),data=dat),
-  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-  lmer(R~t_med+t_var+t.sens.slope+(1|UID),data=dat),
-  lmer(stability ~ (R*t_med)+VR+A+t.sens.slope+t_skw+t_var+(1|UID), data=dat))
-
-cc<-coefs(model_psem)
-plot_psem(n,taxa,cc,layout="circle")
-#print(summary(model_psem))
-saveRDS(model_psem,paste(resloc,"model_psem_",taxa,".RDS",sep=""))
-```
-
-<!--- currently blocked code
-```{r model_psem_without_meancentering, echo=F, cache=T, message=F, cache.extra=list(mtime(here("Results/stability_metric_and_env_all.csv")), mtime(here("R/plot_psem.R")))}
-
-library(tidyverse)
-library(lme4)
-library(piecewiseSEM)
-source(here("R/plot_psem.R"))
-
-mean_centering<-FALSE
+rescaling<-T
+mean_centering<-TRUE
 resloc<-here("Results/res_Prelim_Report/")
 
-sm_all<-read.csv(here("Results/stability_metric_and_env_all.csv"))
-sm_all$UID<-paste(sm_all$source,sm_all$STUDY_ID,sep="_")
-sm_all$A<-sm_all$L+abs(sm_all$U) # total asymmetry
-sm_all<-sm_all%>%dplyr::rename(
-  stability=iCValt,
-  VR=phi_LdM,
-  R=nsp)
-
-sm_all$TAXA<-as.factor(sm_all$TAXA)
-
-#---------------- for birds -----------------------
-taxa<-"birds"
-sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
-
-############ want rescaling? #################
-mydat_scaled<-sm_all_eachtaxa
-mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
-                                         center=mean_centering,scale=T))
-mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
-                                 center=mean_centering,scale=T))
-mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
-                                   center=mean_centering,scale=T))
-mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
-                                  center=mean_centering,scale=T))
-
-mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
-                                        center=mean_centering,scale=T))
-
-mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
-                                     center=mean_centering,scale=T))
-mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
-                                           center=mean_centering,scale=T))
-mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
-                                            center=mean_centering,scale=T))
-mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
-                                          center=mean_centering,scale=T))
-#---  
-
-
-dat<-mydat_scaled
-n<-nrow(dat)
-#model_psem<-piecewiseSEM::psem(
-#  lmer(VR ~ R+t.sens.slope+t_med+(1|UID),data=dat),
-#  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-#  lmer(R~t.sens.slope+t_med+(1|UID),data=dat),
-#  lmer(stability ~ (R + VR +A)+t.sens.slope+t_skw+t_med+
-#         (1|UID), data=dat))
-model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ R+t_med+t.sens.slope+(1|UID),data=dat),
-  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-  lmer(R~t_med+t.sens.slope+(1|UID),data=dat),
-  lmer(stability ~ (R*t_med)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
-cc<-coefs(model_psem)
-plot_psem(n,taxa,cc,layout="circle")
-#print(summary(model_psem))
-saveRDS(model_psem,paste(resloc,"model_psem_wo_meancentering_",taxa,".RDS",sep=""))
-
-#---------------- for fish -----------------------
-taxa<-"fish"
-sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
-
-############ want rescaling? #################
-mydat_scaled<-sm_all_eachtaxa
-mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
-                                         center=mean_centering,scale=T))
-mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
-                                 center=mean_centering,scale=T))
-mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
-                                   center=mean_centering,scale=T))
-mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
-                                  center=mean_centering,scale=T))
-
-mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
-                                        center=mean_centering,scale=T))
-
-mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
-                                     center=mean_centering,scale=T))
-mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
-                                           center=mean_centering,scale=T))
-mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
-                                            center=mean_centering,scale=T))
-mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
-                                          center=mean_centering,scale=T))
-#---  
-dat<-mydat_scaled
-n<-nrow(dat)
-model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ R+t_med+t.sens.slope+(1|UID),data=dat),
-  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-  lmer(R~t_med+t.sens.slope+(1|UID),data=dat),
-  lmer(stability ~ (R*t_med)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
-cc<-coefs(model_psem)
-plot_psem(n,taxa,cc,layout="circle")
-#print(summary(model_psem))
-saveRDS(model_psem,paste(resloc,"model_psem_wo_meancentering_",taxa,".RDS",sep=""))
+call_model_psem(taxa = taxa, data=sm_all,
+                rescaling = rescaling,  
+                mean_centering = mean_centering,
+                resloc=resloc)
 ```
---->
 
+<!--
 So, from the path analysis, what do we see for birds -
 
 - for birds: increasing richness increases stability (positive diversity-stability relationship is confirmed). But temperature plays an important role in detecting the slope or strength of such relationship. High temperature increases the positive slope compared to low temperature. 
@@ -1190,134 +1061,6 @@ and for fish -
 - overall synchrony (variance ratio) is the important determinant for stability (this we knew from BioDyn project findings), as it connects the environmental effects to stability.
 - increasing $t_{med}$ increases richness, and more asynchrony (-ve effect on VR), which is also consistent with more variable traits for the fish species.
 - for fish, skewness has direct negative effect on stability, not indirect effect through tail-dep synchrony as it is not important driver for freshwater as we found from BioDyn. Increasing temperature trend increases tail-dependent synchrony.
-
-<!-- currently blocked portion 
-### Why I did not choose t_var (variability in temperature timeseries) in the path model? {#exclude-tvar}
-
-As I already have added the t_med as one of the variable in the path model, including again it as t_var would increase the multi-collinearity (as increasing VIF). Also we added the t_skw, so together with t_med, it should give you an estimation of whole temperature timeseries distribution - and would be better as directional metric (positive or negative skewness) than just the variability (non-directional). 
-
-
-[I separately ran models replacing t_med with t_var (see graphs below): for birds no environmental effects due to $t_{var}$, for fish I found increasing variability decreases richness.]
-
-
-```{r model_psem_t_var_with_meancentering, echo=F, cache=T, message=F, cache.extra=list(mtime(here("Results/stability_metric_and_env_all.csv")), mtime(here("R/plot_psem.R")))}
-
-library(tidyverse)
-library(lme4)
-library(piecewiseSEM)
-source(here("R/plot_psem.R"))
-
-mean_centering<-TRUE
-resloc<-here("Results/res_Prelim_Report/")
-
-sm_all<-read.csv(here("Results/stability_metric_and_env_all.csv"))
-sm_all$UID<-paste(sm_all$source,sm_all$STUDY_ID,sep="_")
-sm_all$A<-sm_all$L+abs(sm_all$U) # total asymmetry
-sm_all<-sm_all%>%dplyr::rename(
-  stability=iCValt,
-  VR=phi_LdM,
-  R=nsp)
-
-sm_all$TAXA<-as.factor(sm_all$TAXA)
-
-#---------------- for birds -----------------------
-taxa<-"birds"
-sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
-
-############ want rescaling? #################
-mydat_scaled<-sm_all_eachtaxa
-mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
-                                         center=mean_centering,scale=T))
-mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
-                                 center=mean_centering,scale=T))
-mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
-                                   center=mean_centering,scale=T))
-mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
-                                  center=mean_centering,scale=T))
-
-mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
-                                        center=mean_centering,scale=T))
-
-mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
-                                     center=mean_centering,scale=T))
-mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
-                                           center=mean_centering,scale=T))
-mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
-                                            center=mean_centering,scale=T))
-mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
-                                          center=mean_centering,scale=T))
-#---  
-
-
-dat<-mydat_scaled
-n<-nrow(dat)
-model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ R+t_var+t.sens.slope+(1|UID),data=dat),
-  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-  lmer(R~t_var+t.sens.slope+(1|UID),data=dat),
-  lmer(stability ~ (R*t_var)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
-cc<-coefs(model_psem)
-plot_psem(n,taxa,cc,layout="circle")
-#print(summary(model_psem))
-#---------------- for fish -----------------------
-taxa<-"fish"
-sm_all_eachtaxa<-sm_all%>%filter(TAXA==taxa)
-
-############ want rescaling? #################
-mydat_scaled<-sm_all_eachtaxa
-mydat_scaled$stability<-as.numeric(scale(mydat_scaled$stability,
-                                         center=mean_centering,scale=T))
-mydat_scaled$R<-as.numeric(scale(mydat_scaled$R,
-                                 center=mean_centering,scale=T))
-mydat_scaled$VR<- as.numeric(scale(mydat_scaled$VR,
-                                   center=mean_centering,scale=T))
-mydat_scaled$A<- as.numeric(scale(mydat_scaled$A,
-                                  center=mean_centering,scale=T))
-
-mydat_scaled$t_med<-as.numeric(scale(mydat_scaled$t_med,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_med<-as.numeric(scale(mydat_scaled$tmax_med,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_med<-as.numeric(scale(mydat_scaled$tmin_med,
-                                        center=mean_centering,scale=T))
-
-mydat_scaled$t_skw<-as.numeric(scale(mydat_scaled$t_skw,
-                                     center=mean_centering,scale=T))
-mydat_scaled$tmax_skw<-as.numeric(scale(mydat_scaled$tmax_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$tmin_skw<-as.numeric(scale(mydat_scaled$tmin_skw,
-                                        center=mean_centering,scale=T))
-mydat_scaled$t_var<-as.numeric(scale(mydat_scaled$t_var,
-                                     center=mean_centering,scale=T))
-mydat_scaled$trend_t_tau<-as.numeric(scale(mydat_scaled$trend_t_tau,
-                                           center=mean_centering,scale=T))
-mydat_scaled$t.sens.slope<-as.numeric(scale(mydat_scaled$t.sens.slope,
-                                            center=mean_centering,scale=T))
-mydat_scaled$t.lm.slope<-as.numeric(scale(mydat_scaled$t.lm.slope,
-                                          center=mean_centering,scale=T))
-#---  
-dat<-mydat_scaled
-n<-nrow(dat)
-model_psem<-piecewiseSEM::psem(
-  lmer(VR ~ R+t_var+t.sens.slope+(1|UID),data=dat),
-  lmer(A ~ R+t.sens.slope+t_skw+(1|UID),data=dat),
-  lmer(R~t_var+t.sens.slope+(1|UID),data=dat),
-  lmer(stability ~ (R*t_var)+VR+A+t.sens.slope+t_skw+(1|UID), data=dat))
-cc<-coefs(model_psem)
-plot_psem(n,taxa,cc,layout="circle")
-#print(summary(model_psem))
-```
-
 -->
 
 # Discussion
